# CGLabs

./: lab_1.ipynb  lab_2.py  lab_3.py  lab_4.py  splines.py
Noise/: main.cpp  noise.frag
RayTracing/: main.cpp
SpinningObject/: CMakeLists.txt  libs.bash  main.cpp
final/: CMakeLists.txt  OutputShader.frag  main.cpp
morphing/: main.py
